--- a/snippets/product-card-grid.liquid
+++ b/snippets/product-card-grid.liquid
@@ -9,7 +9,7 @@
     {% include 'product-card-grid', max_height: max_height, product: product, show_vendor: section.settings.show_vendor %}
 {% endcomment %}
 <div class="grid-view-item{% unless product.available %} grid-view-item--sold-out{% endunless %} product-card">
-  <a class="grid-view-item__link grid-view-item__image-container full-width-link" href="{{ product.url | within: collection }}">
+  <a class="grid-view-item__link grid-view-item__image-container full-width-link" href="{{ product.url }}">
     <span class="visually-hidden">{{ product.title }}</span>
   </a>
 
@@ -46,4 +46,12 @@
 
   {% include 'product-price-listing', product: product, show_vendor: show_vendor %}
 
+<form method="post" action"/buy/now">
+<input type="hidden" name="id" value="{{ product.variants.first.id }}" />
+<input min="1" type="number" id="quantity" name="quantity" value="1"/>
+<input type="submit" value="Buy Now" class="btn"/>
+</form>
+  
 </div>
+
+
